package org.example;

public interface Post {

    public boolean esDe(String name);
}
